Ensure pre doesn't wrap.
It will gracefully overflow, however.

--- a/-/scss/_base.scss
+++ b/-/scss/_base.scss
@@ -147,6 +147,7 @@ p {
 pre {
 	border: $border;
 	padding: 1rem;
+	word-wrap: normal;
 	
 	@media print {
 		page-break-inside: avoid;
